<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/result"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_name"/>


            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:id="@+id/result_name"/>
        </LinearLayout>



        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_speed"/>


            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:id="@+id/result_speed"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_degree"/>

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/result_deg"
                      android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_temp"/>

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/result_temp"
                      android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_humidity"/>

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/result_humidity"
                      android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_sunrise"/>

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:id="@+id/result_sunrise"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="1"
                      android:orientation="horizontal">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                      android:text="@string/lab_sunset"/>

            <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                  android:id="@+id/result_sunset"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

        <EditText android:id="@+id/city"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/default_city"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/city"
                      android:weightSum="1">

            <Button android:id="@+id/sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_sync"
                    android:layout_weight="0.5"/>

            <Button android:id="@+id/async"
                    android:layout_toLeftOf="@id/sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_async"
                    android:layout_weight="0.5"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>